Apply feedback from review
Co-authored-by: Leonard Ehrenfried <mail@leonard.io>